--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="The origin or Croissants and different ingredients"
+    />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Croissant</title>
+    <title>Origin of Croissants - Croissant.com</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
