--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Picture of Croissant</title>
+    <title>Picture of Croissant - Croissant.com</title>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
